Transferred repo to oh-my. Changed package name.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jeast/aad-sso-wordpress",
+    "name": "oh-my/aad-sso-wordpress",
     "description": "Fork of psignoret/aad-sso-wordpress with added composer support",
     "type": "wordpress-plugin",
     "require": {
