Change package prefix to match other ohmy packages

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "oh-my/aad-sso-wordpress",
+    "name": "ohmy/aad-sso-wordpress",
     "description": "Fork of psignoret/aad-sso-wordpress with added composer support",
     "type": "wordpress-plugin",
     "require": {
